@@ -9,8 +9,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>Describes whether a <see cref="T:FileChooser" /> is being used to open existing files or to save to a possibly new file.</summary>
+    <remarks />
   </Docs>
   <Base>
     <BaseTypeName>System.Enum</BaseTypeName>
@@ -37,7 +37,7 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Indicates open mode. The file chooser will only let the user pick an existing file.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -50,7 +50,7 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Indicates save mode. The file chooser will let the user pick an existing file, or type in a new filename.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -63,7 +63,7 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Indicates an Open mode for selecting folders. The file chooser will let the user pick an existing folder.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -76,7 +76,7 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Indicates a mode for creating a new folder. The file chooser will let the user name an existing or new folder.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
