@@ -9,8 +9,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>These identify the various errors that can occur while calling <see cref="T:Gtk.FileChooser" /> functions.</summary>
+    <remarks />
   </Docs>
   <Base>
     <BaseTypeName>System.Enum</BaseTypeName>
@@ -37,7 +37,7 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Indicates that a file does not exist.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -50,7 +50,7 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Indicates a malformed filename.</summary>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
