@@ -1,3 +1,9 @@
+2004-11-30  John Luke  <john.luke@gmail.com>
+
+	* en/Gtk/FileChooserAction.xml:
+	* en/Gtk/FileChooserError.xml:
+	* en/Gtk/ComboBox.xml: doc some stuff
+
 2004-11-30 Shane Landrum <epicene@pobox.com>
 
 	* en/Gtk/ColorSelection.xml: Documented deprecated UpdatePolicy prop.
